After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739165 - debugutils: Truncate parameter values that are too long
debugutils: Truncate parameter values that are too long
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-25 12:13 UTC by Arun Raghavan
Modified: 2014-12-18 11:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
debugutils: Truncate parameter values that are too long (1.68 KB, patch)
2014-10-25 12:13 UTC, Arun Raghavan
reviewed Details | Review
debugutils: Truncate parameter values that are too long (4.72 KB, patch)
2014-12-12 13:47 UTC, Arun Raghavan
committed Details | Review
debugutils: Truncate parameter values that are too long (4.72 KB, patch)
2014-12-18 11:54 UTC, Arun Raghavan
committed Details | Review

Description Arun Raghavan 2014-10-25 12:13:29 UTC
I think this makes sense to have because we often have properties that are
very long and make the debug dump hard to read (RTP, codec_data, ...).

I've made this unconditional in this patch, but we probably want to control
this via GstDebugGraphDetails. Unfortunately that enum is not extensible, so
the options I see are:

1. Add a GST_DEBUG_GRAPH_SHOW_REALLY_ALL or something like that which is a
   '-1' value, making it future-proof. Then we can have something to control
   printing properties or truncating as a new flag. We could adjust this enum
   in the next API break and replace _REALLY_ALL with just _ALL.

2. Add a new flag after GST_DEBUG_GRAPH_SHOW_ALL. In this case, either we'd
   either have to have truncated as a default and the flag as an enabler for
   full output making the _ALL value not actuall be _ALL, or we'd have to have
   the flag after _ALL be a disabler and have it on by default (and any future
   additions would also have to be disablers, not enablers).

I prefer the first to the second because I think truncation (or even disabling
properties) is a sensible default over printing them out.

Opinions and other options welcome. :)
Comment 1 Arun Raghavan 2014-10-25 12:13:34 UTC
Created attachment 289310 [details] [review]
debugutils: Truncate parameter values that are too long

This removes some information from the dumps, but improves readability.
Comment 2 Arun Raghavan 2014-12-12 05:35:33 UTC
Anyone have any thoughts on the options I mentioned?
Comment 3 Sebastian Dröge (slomo) 2014-12-12 09:17:54 UTC
I prefer the 1) approach. We could call it SHOW_ALL_DETAILS, SHOW_VERBOSE, or something like that. Nobody really needs these large buffer strings in the graph :)
Comment 4 Arun Raghavan 2014-12-12 13:47:49 UTC
Created attachment 292611 [details] [review]
debugutils: Truncate parameter values that are too long

This removes some information from the dumps, but improves readability.
Comment 5 Arun Raghavan 2014-12-18 11:54:37 UTC
The following fix has been pushed:
e4d6896 debugutils: Truncate parameter values that are too long
Comment 6 Arun Raghavan 2014-12-18 11:54:57 UTC
Created attachment 292972 [details] [review]
debugutils: Truncate parameter values that are too long

This removes some information from the dumps, but improves readability.